[gd_scene load_steps=4 format=2]

[ext_resource path="res://ShopItems/shopHeath.png" type="Texture" id=1]
[ext_resource path="res://ShopItems/baseShopItem/BaseShopItem.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60.646, 75.1316 )

[node name="BaseShopItem" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 200 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 5.0
margin_top = 16.0
margin_right = 145.0
margin_bottom = 183.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 63.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Panel/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 38.0
margin_right = 101.0
margin_bottom = 63.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 140.0
margin_bottom = 167.0
rect_min_size = Vector2( 140, 100 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]Health[/center]

[center]10 Gold[/center]"
text = "Health

10 Gold"

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 74.0825, 99.8991 )
shape = SubResource( 1 )

[node name="Description" type="RichTextLabel" parent="."]
visible = false
margin_left = -0.489853
margin_top = -46.5108
margin_right = 149.51
margin_bottom = -1.51079
rect_min_size = Vector2( 150, 45 )
bbcode_enabled = true
bbcode_text = "[center]This is a discription popup[/center]"
text = "This is a discription popup"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_Panel_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
